--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Tests coming soon ...\" && exit 0"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
