--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,13 +45,11 @@ workflows:
     jobs:
       - test:
           filters:
-            tags:
-              only: /^v.*/
+            branches:
+              only: develop
       - deploy:
           requires:
             - test
           filters:
-            tags:
-              only: /^v.*/
             branches:
-              ignore: /.*/
+              only: master
