--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,7 @@ workflows:
   version: 2
   test-deploy:
     jobs:
-      - test:
-          filters:
-            branches:
-              only: develop
+      - test
       - deploy:
           requires:
             - test
