--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "echo \"Tests coming soon ...\" && exit 0"
+    "test": "echo \"Tests coming soon ...\" && exit 0",
+    "clean": "rm -Rf ./lib",
+    "build": "npm run clean && babel ./src --out-dir ./lib --copy-files"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
@@ -19,5 +21,13 @@
     "moment": "^2.22.1",
     "mustache": "^2.3.0",
     "query-string": "^6.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-source-map-support": "^2.0.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
